--- a/WebContent/Administracion/Clients.xhtml
+++ b/WebContent/Administracion/Clients.xhtml
@@ -16,7 +16,7 @@
 	<nav class="navbar navbar-expand-lg bg-gradient-light">
 		<div class="navbar-nav mr-auto">
 		<a onclick="PF('sidebarOperations').show()"><i class="fas fa-bars"/></a>
-		<h3 class="d-flex justify-content-center" style="text-align: center; color: Black;"><a>Pelubosque y Carátulas</a></h3>
+		<h3 class="d-flex justify-content-center" style="text-align: center;"><a>Pelubosque y Carátulas</a></h3>
 		</div>
 		<div class="navbar-nav ml-auto">
 		<h3 style="text-align: center;"><a onclick="PF('sidebarOperations').show()"><i class="fas fa-user-circle fa-3x"/></a></h3>
@@ -48,7 +48,7 @@
 	</div>
 	<div class="container">
 		<br />
-		<h1>Puntos</h1>
+		<h1>Clientes</h1>
 		<p:dataTable var="appointments" value="server.db.getuserappointments">
 			<p:column headerText="Sede"></p:column>
 			<p:column headerText="Ubicación"></p:column>
