--- a/WebContent/Aplicacion/forgotPassword.xhtml
+++ b/WebContent/Aplicacion/forgotPassword.xhtml
@@ -23,17 +23,11 @@
 	<h1 style="text-align:center;">Iniciar Sesion</h1>
 	<br />
 	<div class="container d-flex justify-content-center">
-	<h:form class="form-group">
+	<h:form class="form-group" id="requestPassword" rendered="true">
 		<p:growl id="messages" showDetail="true" sticky="true"/>		
 		<p:panelGrid columns="1" cellpadding="5" styleClass="ui-noborder">
-			<p:inputText pt:placeholder="Usuario" required="true" validatorMessage="El usuario no puede estar vacío"/>
-			<p:password pt:placeholder="Contraseña" required="true" validatorMessage="Todo usuario debe tener contraseña"/>
-			<p:selectBooleanCheckbox itemLabel="Recordarme"/>
-			<p:link href="forgotPassword.xhtml">¿Olvidaste tu contraseña?</p:link>
-		</p:panelGrid>
-		<p:panelGrid columns="2" cellpadding="5" styleClass="ui-noborder">
-			<p:linkButton value="Registrarse" href="../signup/page1.xhtml"/>
-			<p:commandButton value="Iniciar Sesion" update="messages"/>
+			<p:inputText pt:placeholder="Correo" required="true" validatorMessage="El usuario no puede estar vacío"/>
+			<p:linkButton value="Enviar Link de Reestablecimiento" href="confirmEmail.xhtml" update="messages"/>
 		</p:panelGrid>
 	</h:form>
 	</div>
