--- a/WebContent/CRM/NewCard.xhtml
+++ b/WebContent/CRM/NewCard.xhtml
@@ -8,40 +8,44 @@
 	xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions">
 <h:head>
-	<title>Pelubosque y Carátulas</title>
 	<h:outputStylesheet library="css" name="bootstrap.css" />
 	<h:outputScript library="js" name="bootstrap.js" />
 	<script src="https://kit.fontawesome.com/302a1eb3e6.js" />
 </h:head>
+<script>
+function goBack() {
+  window.history.back();
+}
+</script>
 <header>
 	<nav class="navbar navbar-expand-lg bg-gradient-light">
-		<h3 class="d-flex justify-content-center" style="text-align: center;"><a href="/PelubosqueCaratulas/" style="color: Black;">Pelubosque y Carátulas</a></h3>
+		<div class="navbar-nav mr-auto">
+		<h3 class="d-flex justify-content-center" style="text-align: center;"><a onclick="goBack()">Pelubosque y Carátulas</a></h3>
+		</div>
 	</nav>
 </header>
 <h:body>
-	<br />
-	<h1 style="text-align:center;">Iniciar Sesion</h1>
-	<br />
 	<div class="container d-flex justify-content-center">
-	<h:form class="form-group">
-		<p:growl id="messages" showDetail="true" sticky="true"/>		
-		<p:panelGrid columns="1" cellpadding="5" styleClass="ui-noborder">
-			<p:inputText pt:placeholder="Usuario" required="true" validatorMessage="El usuario no puede estar vacío"/>
-			<p:password pt:placeholder="Contraseña" required="true" validatorMessage="Todo usuario debe tener contraseña"/>
-			<p:selectBooleanCheckbox itemLabel="Recordarme"/>
-			<p:link href="forgotPassword.xhtml">¿Olvidaste tu contraseña?</p:link>
+	<h:form class="form">
+		<p:growl id="messages" showDetail="true" sticky="true"/>	
+		<p:panelGrid style="border:none;" columns="4" cellpadding="5" styleClass="ui-noborder">
+			<p:inputNumber id="cardCheck" thousandSeparator="" decimalPlaces="0" pt:placeholder="Num Tarjeta"/>
+			<p:datePicker id="expDate" pattern="MM/yyyy" view="month" yearNavigator="true" yearRange="2020:2040" pt:placeholder="Fecha Expiración"/>
+			<p:inputNumber id="ccv" pt:placeholder="CCV"/>
+			<p:inputText id="owner" pt:placeholder="Titular de la tarjeta"/>
+			<p:commandButton id="oneMoreCard" icon="fas fa-plus"/>
 		</p:panelGrid>
-		<p:panelGrid columns="2" cellpadding="5" styleClass="ui-noborder">
-			<p:linkButton value="Registrarse" href="../signup/page1.xhtml"/>
-			<p:commandButton value="Iniciar Sesion" update="messages"/>
+		<p:panelGrid columns="2" styleClass="ui-noborder">
+			<p:commandButton value="Inscribir Tarjeta"/>
 		</p:panelGrid>
 	</h:form>
 	</div>
 	<br />
 </h:body>
-<footer class="bg-dark fixed-bottom">
+<footer class="bg-dark">
 	<nav class="navbar navbar-expand-lg">
-		<p style="color: white; text-align: center;">©2020 Pelubosque - Todos los derechos reservados</p>
+		<p style="color: white; text-align: center;">©2020 Pelubosque - Todos los derechos
+			reservados</p>
 		<ul class="navbar-nav ml-auto">
 			<li><i class="fab fa-cc-mastercard fa-2x px-1"
 				style="color: White;" /></li>
