--- a/WebContent/error/comingsoon.html
+++ b/WebContent/error/comingsoon.html
@@ -3,8 +3,27 @@
 <head>
 <meta charset="UTF-8">
 <title>Pelubosque</title>
+<link rel="stylesheet" href="${pageContext.request.contextPath}/PelubosqueCaratulas/resources/css/bootstrap.css">
+<script src="https://kit.fontawesome.com/302a1eb3e6.js"></script>
 </head>
+<header>
+	<h1 style="text-align: center;"><a href="../PelubosqueCaratulas" style="color: Black;">Pelubosque y Carátulas</a></h1>
+</header>
 <body>
-<h1>Esta funcion no está disponible</h1>
+<div class="container d-flex justify-content-center bg-dark align-middle">
+	<h1 style="text-align: center; color: White;">En Construcción</h1>
+</div>
+<p style="text-align: center;">Esta funcion aún no está disponible.</p>
 </body>
+<footer class="bg-dark fixed-bottom">
+	<nav class="navbar navbar-expand-lg">
+		<p style="color: white; text-align: center;">©2020 Pelubosque - Todos los derechos reservados</p>
+		<ul class="navbar-nav ml-auto">
+			<li><i class="fab fa-cc-mastercard fa-2x px-1" style="color: White;"></i></li>
+			<li><i class="fab fa-cc-visa fa-2x px-1" style="color: White;" ></i></li>
+			<li><i class="fab fa-cc-amex fa-2x px-1" style="color: White;" ></i></li>
+			<li><i class="fas fa-money-bill-alt fa-2x px-1"	style="color: White;" ></i></li>
+		</ul>
+	</nav>
+</footer>
 </html>
