--- a/WebContent/Aplicacion/index.xhtml
+++ b/WebContent/Aplicacion/index.xhtml
@@ -30,13 +30,13 @@
 		<h3 style="text-align: center;">#{nombreUsuario}</h3>
 		<p style="text-align: center;" class="text-muted">¿Qué quieres hacer hoy?</p>
 		<br />
-		<p:panelGrid columns="1" styleClass="ui-noborder" id="userPanel" rendered="false">
+		<p:panelGrid columns="1" styleClass="ui-noborder" id="userPanel">
 			<p><a><i class="fas fa-user-edit"/> Mi Cuenta</a></p>
 			<p><a><i class="fas fa-credit-card"/> Mis Medios de Pago</a></p>
 			<p><a><i class="fas fa-calendar-alt"/> Mis Citas</a></p>
 			<p><a><i class="fas fa-door-open"/> Cerrar Sesion</a></p>
 		</p:panelGrid>
-		<p:panelGrid columns="1" styleClass="ui-noborder" id="professionalPanel" rendered="false">
+		<p:panelGrid columns="1" styleClass="ui-noborder" id="professionalPanel">
 			<p><a><i class="fas fa-user-edit"/> Mi Cuenta</a></p>
 			<p><a><i class="fas fa-credit-card"/> Mis Medios de Pago</a></p>
 			<p><a><i class="fas fa-calendar-alt"/> Mis Citas</a></p>
