--- a/WebContent/Aplicacion/PaymentCollection.xhtml
+++ b/WebContent/Aplicacion/PaymentCollection.xhtml
@@ -62,13 +62,13 @@
 	</div>
 	<div class="container">
 		<br />
-		<h1>Mis Citas</h1>
+		<h1>Mis Recaudos</h1>
 		<p:dataTable var="appointments" value="server.db.getuserappointments">
 			<p:column headerText="Selección"></p:column>
 			<p:column headerText="Fecha"></p:column>
-			<p:column headerText="Profesional"></p:column>
-			<p:column headerText="Valor"></p:column>
+			<p:column headerText="Cliente"></p:column>
 			<p:column headerText="Lugar"></p:column>
+			<p:column headerText="Valor"></p:column>
 			<p:column headerText="Operaciones"></p:column>
 		</p:dataTable>
 	</div>
