--- a/WebContent/Aplicacion/forgotPassword.xhtml
+++ b/WebContent/Aplicacion/forgotPassword.xhtml
@@ -27,7 +27,7 @@
 		<p:growl id="messages" showDetail="true" sticky="true"/>		
 		<p:panelGrid columns="1" cellpadding="5" styleClass="ui-noborder">
 			<p:inputText pt:placeholder="Correo" required="true" validatorMessage="El usuario no puede estar vacío"/>
-			<p:linkButton value="Enviar Link de Reestablecimiento" href="confirmEmail.xhtml" update="messages"/>
+			<p:commandButton value="Enviar Link de Reestablecimiento" action="#{user.forgotPassword()}" update="messages"/>
 		</p:panelGrid>
 	</h:form>
 	</div>
