--- a/WebContent/Administracion/Account.xhtml
+++ b/WebContent/Administracion/Account.xhtml
@@ -16,7 +16,7 @@
 	<nav class="navbar navbar-expand-lg bg-gradient-light">
 		<div class="navbar-nav mr-auto">
 		<a onclick="PF('sidebarOperations').show()"><i class="fas fa-bars"/></a>
-		<h3 class="d-flex justify-content-center" style="text-align: center; color: Black;"><a>Pelubosque y Carátulas</a></h3>
+		<h3 class="d-flex justify-content-center" style="text-align: center;"><a>Pelubosque y Carátulas</a></h3>
 		</div>
 		<div class="navbar-nav ml-auto">
 		<h3 style="text-align: center;"><a onclick="PF('sidebarOperations').show()"><i class="fas fa-user-circle fa-3x"/></a></h3>
@@ -40,23 +40,7 @@
 			<p><a><i class="fas fa-door-open"/> Cerrar Sesion</a></p>
 		</p:panelGrid>
 	</p:sidebar>
-	<div class="container d-flex justify-content-center">
-		<p:panelGrid columns="3" styleClass="ui-noborder">
-			<p:commandButton icon="fas fa-file-download" value=" Descargar Reporte"/>
-			<p:commandButton icon="fas fa-file-contract" value="Solicitudes"/>
-			<p:commandButton icon="fas fa-users" value=". Clientes"/>
-		</p:panelGrid>
-	</div>
-	<div class="container">
-		<br />
-		<h1>Puntos</h1>
-		<p:dataTable var="appointments" value="server.db.getuserappointments">
-			<p:column headerText="Sede"></p:column>
-			<p:column headerText="Ubicación"></p:column>
-			<p:column headerText="Aforo"></p:column>
-			<p:column headerText="Detalle"></p:column>
-		</p:dataTable>
-	</div>
+	
 	<br />
 </h:body>
 <footer class="bg-dark">
