--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -27,8 +27,8 @@
 				<li><a><i class="fas fa-briefcase fa-lg" /> Trabaja con Nosotros </a></li>
 				<li><a><i class="fas fa-question fa-lg" /> Como Funciona </a></li>
 				<li><a href="mailto:gblancol@unbosque.edu.co" style="color: Black;"><i class="fas fa-envelope fa-lg" /> Contacto </a></li>
-				<li><a href="faces/signup/page1.xhtml" style="color: Black;"><i class="fas fa-plus fa-lg" /> Registrarse </a></li>
-				<li><a href="faces/Aplicacion/login.xhtml" style="color: Black;"><i class="fas fa-user-circle fa-lg" /> Mi Cuenta </a></li>
+				<li><a href="${pageContext.request.contextPath}/PelubosqueCaratulas/faces/signup/page1.xhtml" style="color: Black;"><i class="fas fa-plus fa-lg" /> Registrarse </a></li>
+				<li><a href="${pageContext.request.contextPath}/PelubosqueCaratulas/faces/Aplicacion/login.xhtml" style="color: Black;"><i class="fas fa-user-circle fa-lg" /> Mi Cuenta </a></li>
 			</ul>
 		</div>
 	</nav>
@@ -64,7 +64,7 @@
 						<img class="img-fluid w-75 d-flex justify-content-center" style="margin-left: auto; margin-right: auto;" src="resources/img/TempFoto3.jpg" />
 						<div class="carousel-caption d-none d-md-block bg-dark">
 							<h3><b>Es gratis</b></h3>
-							<a href="faces/signup/page1.xhtml"><button class="btn btn-primary">¡Crea tu cuenta ya!</button></a>
+							<a href="${pageContext.request.contextPath}/PelubosqueCaratulas/faces/signup/page1.xhtml"><button class="btn btn-primary">¡Crea tu cuenta ya!</button></a>
 						</div>
 					</div>
 				</div>
