--- a/WebContent/signup/userDone.xhtml
+++ b/WebContent/signup/userDone.xhtml
@@ -35,7 +35,7 @@
 			<h2 style="text-align: center;">¡Gracias #{username}!</h2>
 			<p style="text-align: center;">Terminaste de manera satisfactoria tu registro.</p>
 			<div class="d-flex justify-content-end">
-				<p:linkButton value="Haz click aquí para acceder a tu cuenta" href="index.xhtml?sessionID=#{user.sessionID}"/>
+				<p:linkButton value="Haz click aquí para acceder a tu cuenta" href="../Aplicacion/index.xhtml?sessionID=#{user.sessionID}"/>
 			</div>
 
 		</p:panelGrid>
